# ml-pipeline-anomaly-detection

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/: autoencoder_threshold_sweep.csv  autoencoder_training_history.csv  metrics_summary.csv  random_forest_feature_importance.csv  xgboost_feature_importance.csv
configs/: baseline.yaml
data/: sample_pipeline_data.csv
docs/: experiment_notes.md  limitations.md  what_did_not_work.md
notebooks/: anomaly_detection.ipynb  anomaly_detection_walkthrough.ipynb
src/: data_generation.py  feature_engineering.py  model_training.py  pipeline.py  reporting.py
src/anomaly_pipeline/: data_generation.py  model_training.py  pipeline.py
